--- a/style.css
+++ b/style.css
@@ -36,3 +36,143 @@ header ul li{
 .header-content .green{
     color: #21B573;
 }
+
+/* Feature Start */
+
+.feature{
+    margin-top: 30px;
+}
+.feature .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.feature .col-md-2{
+    margin: 30px 15px;
+    padding: 35px 0;
+    text-align: center;
+    line-height: 1.5rem;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
+    border-radius: 5px;
+    transition: transform 0.5s;
+    /* border: 2px solid red; */
+}
+.feature .col-md-2:hover{
+    transform: translateY(-5px);
+}
+
+.feature .col-md-2 h4{
+    font-size: 24px;
+    padding-top: 5px;
+}
+.feature .col-md-2 p{
+    margin-top: -5px;
+    font-size: 16px;
+}
+
+/* Courses start  */
+.courses h1{
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 70px;
+}
+.courses .line{
+    background-color: gray;
+    height: 10px;
+    width: 200px;
+    position: absolute;
+    left: 40%;
+}
+
+.courses{
+    margin-top: 50px;
+}
+.courses .courses-shadow{
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.15);
+    border-radius: 5px;
+    border: none;
+}
+.courses .courses-img{
+    padding: 10px;
+}
+.courses .date-seat{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px;
+}
+
+
+/* Testimonial */
+
+.testimonial{
+    margin-top: 85px;
+}
+.testimonial h1{
+    text-align: center;
+    font-weight: bold;
+}
+.testimonial .container .row .wrap{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 15%;
+
+}
+.testimonial .testimonial-img{
+    width: 150px;  
+    line-height: 240px;
+   
+}
+.testimonial p{
+    padding-left: 40px;
+}
+
+/* footer */
+
+footer{
+    background-color: black;
+    margin-top: 40px;
+}
+footer .row{
+    padding: 32px 0;
+}
+footer p, h2{
+    color: rgba(255, 255, 255, 0.9) ;
+}
+footer h2{
+    margin-bottom: 15px;
+}
+footer .links{
+    /* display: flex;
+    flex-direction: column; */
+}
+footer p{
+    
+    margin-bottom: 0;
+}
+footer .container .row .links p a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
+    
+}
+footer .container .row .links p a:hover{
+    color: white;  
+}
+
+footer .copyright{
+    padding: 35px 0;
+}
+footer .copyright p{
+    text-align: center;
+}
+footer .copyright p a{
+    text-decoration: none;
+    color: rgba(37, 37, 231, 0.8);
+    padding-left: 5px;
+}
+footer .copyright p a:hover{
+    text-decoration: underline;
+    color: rgba(45, 45, 216, 1);
+}
